package com.kco.pattern.decorator.demo;

/**
 * Created by Administrator on 2017/5/12.
 */
public interface Food {
    // 描述
    String description();
    // 价格
    double price();
}
